[project]
name = guessinggame
version = 0.0.1
author = Tyler Bolz
author_email = bolz@ksu.edu
description = A fun example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-tylerbolz
project_urls = 
    Bug Tracker = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-tylerbolz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
guessinggame = py.typed